--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover { text-decoration : underline; }
 a, a:visited { color : #0050e7; }
 .publogo { width: 100 px; margin-right : 10px; float : left; border : 0;}
 .publication { clear : left; padding-bottom : 0px; }
-.publication p { height : 100px; padding-top : 0px;}
+.publication p { height : 100px; padding-top : 0px; font-weight: normal;}
 .publication strong a { color : #0000A0; }
 .publication .links { position :relative ; top : 10px }
 .publication .links a { margin-right : 5px; font-size: 15px; font-weight: normal}
@@ -387,7 +387,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b>TIP 2022</b></em>
+		<em><b>TIP, 2022</b></em>
                 <br> 
                Weidong Zhang, Peixian Zhang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
@@ -410,7 +410,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Global-and-Local Collaborative Learning for Co-Salient Object Detection</a>
                 </strong>
 		  <br> 
-		<em><b>TCYB 2022</b></em>
+		<em><b>TCYB, 2022</b></em>
                 <br> 
               Runmin Cong, Ning Yang, and <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
                 <br>
