--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ a, a:visited { color : #0050e7; }
 .code strong a { color : #000; }
 .external a { margin : 0 10px; }
 .external a.first { margin : 0 10px 0 0; }
-	</style>
+li {font-weight: normal;}
+</style>
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 <meta name="viewport" content="width=device-width">
