--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ a, a:visited { color : #0050e7; }
 .code strong a { color : #000; }
 .external a { margin : 0 10px; }
 .external a.first { margin : 0 10px 0 0; }
-li {font-weight: normal;}
+li, ul {font-weight: normal;}
 </style>
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
