--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ li, ul {font-weight: normal;}
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hiring:</h2>
  
-<br><font color="blue">We are looking for Research Fellow, Research Assistant, and Project Officer who want to conduct
+<br><p><font color="blue">We are looking for Research Fellow, Research Assistant, and Project Officer who want to conduct
 research and develop advanced deep learning algorithms for image and video enhancement and restoration, computational imaging, and image signal processor. <a href="https://www.mmlab-ntu.com/careers.html" target="_blank"><font color="#ff0000">[Join Us]</font></a></font></p></br>
 
 </ul>
