--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>TIP, 2022</b></em>
                 <br> 
-               Weidong Zhang, Peixian Zhang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
+               Weidong Zhang, Peixian Zhuang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
