--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="">PDF</a>| 
 		    <a href="https://li-chongyi.github.io/proj_MMLE">Project Page</a>| 	
-                    <a href="/">Code</a>
+                    <a href="https://github.com/Li-Chongyi/MMLE_code">Code</a>
                 </span>
             </p>
           </div>
