--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -24,7 +24,7 @@
       <table border="0" align="center" class="menu" style="margin-bottom: 8px;">
          <tbody>
             <tr>
-               <td align="center">| <a href="#paper">Paper</a> | <a href="#Supple">Supplementary Material</a> | <a href="" target="_blank">Code</a> | </td>
+               <td align="center">| <a href="#paper">Paper</a> | <a href="#Supple">Supplementary Material</a> | <a href="https://github.com/Li-Chongyi/MMLE_code" target="_blank">Code</a> | </td>
             </tr>
          </tbody>
       </table>
