--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/05 --One paper has been recognized as <strong>ESI Hot Paper</strong></li>
+<li> 2022/05 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/05 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Journal of Oceanic Engineering (IF: 3.554).</strong></li>
 <li> 2022/04 --Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li> 2022/04 --One paper has been accepted by <strong>TCYB</strong></li>
