--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -138,7 +138,7 @@
                      <p><b>Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</b><br>
                         Weidong Zhang, Peixian Zhuang, Haihan Sun, Guohou Li, Sam Kwong, and Chongyi Li.<br />
                         <em></em><br><br>
-                        [<a href="" target="_blank" rel="noopener noreferrer">paper</a>]
+                        [<a href="https://ieeexplore.ieee.org/document/9788535" target="_blank" rel="noopener noreferrer">paper</a>]
                      </p>
                   </td>
                </tr>
@@ -151,7 +151,7 @@
                <tr>
                   <td width="180"><img src="MLLE_files//pics/paper_logo.jpg" alt="" height="150"></td>
                   <td align="left">
-                     [<a href="" target="_blank" rel="noopener noreferrer">supplementary material</a>]
+                     [<a href="PDF/MMLE_Supple.pdf" target="_blank" rel="noopener noreferrer">supplementary material</a>]
                   </td>
                </tr>
             </tbody>
