--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Project Page</a>| 	
+		    <a href="">Project Page</a>| 	
                     <a href="">Code</a>
                 </span>
             </p>
