--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/06 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/05 --One paper has been recognized as <strong>ESI Hot Paper</strong></li>
 <li> 2022/05 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/05 --I am nominated with honor to serve as an <strong>Associate Editor</strong> of IEEE Journal of Oceanic Engineering (IF: 3.554).</strong></li>
