--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@ research and develop advanced deep learning algorithms for image and video enhan
 <ul>
 <div style="text-align: justify; display: block; margin-right: auto;">
 <p>My primary reseach interests include artificial intelligence, machine learning, computer vision, and image processing, particularly in the domains of 
-  <li><strong>Image and Video Restoration and Enhancement</strong></li> 
-	<li>The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application. The specific research topics are</li> 
+  <li><strong>Image and Video Restoration and Enhancement</strong></li> <br/>
+	The purpose is to develop algorithms to process an image or video so that result is more suitable than original image or video for specific application. The specific research topics are 
   <ol type="a" start="1">
       <li>restoring and enhancing the images and videos captured in adverse weather (hazy, foggy, sandy, dusty, rainy, snowy day)</li>
       <li>restoring and enhancing the images and videos captured in special circumstances or devices (underwater, weak illumination, dark, under-display devices)</li>
       <li>general photo enhancement, auto image retouching</li>
       <li>image/depth super-resolution, image deblurring, image denosing</li>
   </ol>
-  <li><strong>Multi-Modality Scene Understanding</strong> </li>
-	  <li>The purpose is to design AI models to perceive and understand scenes. The specific research topics are</li>
+  <li><strong>Multi-Modality Scene Understanding</strong> </li><br/>
+	  The purpose is to design AI models to perceive and understand scenes. The specific research topics are
   <ol type="a" start="1">
       <li>RGB-D salient object detection</li>
       <li>co-salient object detection</li>
