--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_Image_Dehazing_Transformer_With_Transmission-Aware_3D_Position_Embedding_CVPR_2022_paper.pdf">PDF</a>| 
+		    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Project Page</a>| 	
+                    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Code</a>
                 </span>
             </p>
           </div>
