--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>TCSVT, 2022</b></em>
                 <br> 
-              Qiuping Jiang, Yuses Gu, and <b>Chongyi Li</b>, Runmin Cong, and Feng Shao.
+              Qiuping Jiang, Yuses Gu, <b>Chongyi Li</b>, Runmin Cong, and Feng Shao.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/abstract/document/9749233">PDF</a>| 
@@ -444,7 +444,27 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-
+	
+	  <div class="publication">
+            <img src="./logo/UDC_Curve.jpg" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Under-Display Camera Image Enhancement via Cascaded Curve Estimationc</a>
+                </strong>
+		  <br> 
+		<em><b>TIP, 2022</b></em>
+                <br> 
+              Jun Luo, Wenqi Ren, Tao Wang,  <b>Chongyi Li</b>, and Xiaochun Cao.
+                <br>
+                <span class="links">
+                    <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/document/9798712">PDF</a>| 
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 	  <div class="publication">
             <img src="./logo/survey.png" class="publogo" width="300 px">
