--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               Jun Luo, Wenqi Ren, Tao Wang,  <b>Chongyi Li</b>, and Xiaochun Cao.
                 <br>
                 <span class="links">
-                    <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/document/9798712">PDF</a>| 
+                    <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/document/9798712">PDF</a> 
                 </span>
             </p>
           </div>
