--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+		    <a href="https://li-chongyi.github.io/CuDi_files/">Project Page</a>| 	
+                    <a href="https://li-chongyi.github.io/CuDi_files/">Code</a>
                 </span>
             </p>
           </div>
@@ -299,6 +299,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
                     <a href="https://shangchenzhou.com/projects/LEDNet//">Code</a>|
 		    <a href="https://shangchenzhou.com/projects/LEDNet//">Dataset</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+ <div class="publication">
+            <img src="logo/Flare7K_1.png" onmouseover="this.src='logo/Flare7K_2.png';" onmouseout="this.src='logo/Flare7K_3.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+               Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
+		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>
                 </span>
             </p>
           </div>
