--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2022</b></em>
                 <br> 
-               Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, Chen Change Loy.
+               Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
