--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="logo/Flare7K_2.png" onmouseover="this.src='logo/Flare7K_2.png';" onmouseout="this.src='logo/Flare7K_2.png';" class="publogo"  width="300 px">
+            <img src="logo/Flare7k.gif" onmouseover="this.src='logo/Flare7k.gif';" onmouseout="this.src='logo/Flare7k.gif';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
