--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">PDF</a>| 
 		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
 		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>
+		  <a href="https://www.youtube.com/watch?v=CR3VFj4NOQM&feature=youtu.be">Video</a>
                 </span>
             </p>
           </div>
