--- a/index.html
+++ b/index.html
@@ -328,10 +328,37 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           </div>
           <br>
           <br>
+          <br>
+	<br />
 	<br />
 	<br />
 	
 	  <div class="publication">
+            <img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href=""Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+                Shangchen Zhou, Kelvin C.K. Chan, <b>Chongyi Li</b>, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2206.11253.pdf">PDF</a>| 
+		    <a href="https://shangchenzhou.com/projects/CodeFormer/">Project Page</a>| 	
+		    <a href="https://github.com/sczhou/CodeFormer">Code</a>
+		  <a href="https://www.youtube.com/watch?v=d3VDpkXlueI">Video</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+
+		  <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
@@ -346,10 +373,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
             </p>
           </div>
           <br>
-          <br>
 	<br />
-	<br />
-	
 	
 	  <div class="publication">
            <img src="./logo/MIPI.png" class="publogo" width="300 px">
