--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2206.11253.pdf">PDF</a>| 
 		    <a href="https://shangchenzhou.com/projects/CodeFormer/">Project Page</a>| 	
-		    <a href="https://github.com/sczhou/CodeFormer">Code</a>
+		    <a href="https://github.com/sczhou/CodeFormer">Code</a>| 
 		  <a href="https://www.youtube.com/watch?v=d3VDpkXlueI">Video</a>
                 </span>
             </p>
