--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
             <img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
-                    <a href=""Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
+                    <a href="">Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
                 </strong>
 		  <br> 
 		<em><b>2022</b></em>
