--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</a>
                 </strong>
 		  <br> 
-		<em><b>ECCV 2022</b></em>
+		<em><b>ECCV, 2022</b></em>
                 <br> 
                Shangchen Zhou, <b>Chongyi Li</b>, Chen Change Loy.
                 <br>
@@ -361,6 +361,31 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
+	
+	 <div class="publication">
+            <img src="logo/ACMMM22_normalization.png" onmouseover="this.src='logo/ACMMM22_normalization.png';" onmouseout="this.src='logo/ACMMM22_normalization.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Normalization-based Feature Selection and Restitution for Pan-sharpening</a>
+                </strong>
+		  <br> 
+		<em><b>ACMMM, 2022</b></em>
+                <br> 
+               Man Zhou,  Jie Huang, Keyu Yan, Gang Yang, Aiping Liu, <b>Chongyi Li</b>, and Feng Zhao.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>|
+		    <a href="">Dataset</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
 	
 	<div class="publication">
             <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
