--- a/index.html
+++ b/index.html
@@ -387,6 +387,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
+	 <div class="publication">
+            <img src="logo/ACMMM22_frequency.png" onmouseover="this.src='logo/ACMMM22_frequency.png';" onmouseout="this.src='logo/ACMMM22_frequency.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Adaptively Learning Low-high Frequency Information Integration for Pan-sharpening</a>
+                </strong>
+		  <br> 
+		<em><b>ACMMM, 2022</b></em>
+                <br> 
+               Man Zhou, Jie Huang, <b>Chongyi Li</b>, Hu Yu, Keyu Yan, Naishan Zheng, and Feng Zhao.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>|
+		    <a href="">Dataset</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 	<div class="publication">
             <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
