--- a/index.html
+++ b/index.html
@@ -363,6 +363,30 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
+	<div class="publication">
+            <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Image Dehazing Transformer with Transmission-Aware 3D Position Embedding</a>
+                </strong>
+		  <br> 
+		<em><b>CVPR, 2022</b></em>
+                <br> 
+              Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
+                <br>
+                <span class="links">
+                    <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_Image_Dehazing_Transformer_With_Transmission-Aware_3D_Position_Embedding_CVPR_2022_paper.pdf">PDF</a>| 
+		    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Project Page</a>| 	
+                    <a href="https://github.com/Li-Chongyi/Dehamer">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	
 	 <div class="publication">
             <img src="logo/ACMMM22_normalization.png" onmouseover="this.src='logo/ACMMM22_normalization.png';" onmouseout="this.src='logo/ACMMM22_normalization.png';" class="publogo"  width="300 px">
             <p> 
@@ -410,30 +434,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
-	
-	<div class="publication">
-            <img src="logo/haze_input.jpg" onmouseover="this.src='logo/haze_result.jpg';" onmouseout="this.src='logo/haze_input.jpg';" class="publogo"  width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Image Dehazing Transformer with Transmission-Aware 3D Position Embedding</a>
-                </strong>
-		  <br> 
-		<em><b>CVPR, 2022</b></em>
-                <br> 
-              Chunle Guo, Qixin Yan, Saeed Anwar, Runmin Cong, Wenqi Ren, and <b>Chongyi Li<sup>+</sup></b>.
-                <br>
-                <span class="links">
-                    <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_Image_Dehazing_Transformer_With_Transmission-Aware_3D_Position_Embedding_CVPR_2022_paper.pdf">PDF</a>| 
-		    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Project Page</a>| 	
-                    <a href="https://li-chongyi.github.io/Proj_DeHamer.html">Code</a>
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	<br />
-	<br />
-	
+
 
 	 <div class="publication">
             <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/underwater_video_demo.mp4"> <source src="MLLE_files/videos/underwater_video_demo.mp4" type="video/mp4"></video>
