--- a/Proj_DeHamer.html
+++ b/Proj_DeHamer.html
@@ -265,20 +265,20 @@
           <tbody><tr>
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="./logo/CVPR NewOrleansLogo_WebsiteCorner.png" ,="" width="70%"></a><br><br>
-                <a href="" target="_blank">Paper</a>
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_Image_Dehazing_Transformer_With_Transmission-Aware_3D_Position_Embedding_CVPR_2022_paper.pdf" target="_blank" class="imageLink"><img src="./logo/CVPR NewOrleansLogo_WebsiteCorner.png" ,="" width="70%"></a><br><br>
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_Image_Dehazing_Transformer_With_Transmission-Aware_3D_Position_Embedding_CVPR_2022_paper.pdf" target="_blank">Paper</a>
               </center>
             </td>
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="./logo/CVPR NewOrleansLogo_WebsiteCorner.png" ,="" width="70%"></a><br><br>
-                <a href="" target="_blank">Supplementary Material</a>
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/supplemental/Guo_Image_Dehazing_Transformer_CVPR_2022_supplemental.pdf" target="_blank" class="imageLink"><img src="./logo/CVPR NewOrleansLogo_WebsiteCorner.png" ,="" width="70%"></a><br><br>
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/supplemental/Guo_Image_Dehazing_Transformer_CVPR_2022_supplemental.pdf" target="_blank">Supplementary Material</a>
               </center>
             </td>
             <td width="20%">
               <center>
-                <a href="" target="_blank" class="imageLink"><img src="./Zero-DCE_files/icon_github.png" ,="" width="40%"></a><br><br>
-                <a href="" target="_blank">Code and Model</a>
+                <a href="https://github.com/Li-Chongyi/Dehamer" target="_blank" class="imageLink"><img src="./Zero-DCE_files/icon_github.png" ,="" width="40%"></a><br><br>
+                <a href="https://github.com/Li-Chongyi/Dehamer" target="_blank">Code and Model</a>
               </center>
             </td>
           </tr>
@@ -292,7 +292,7 @@
           author = {Guo, Chunle and Yan, Qixin and Anwar, Saeed and Cong, Runmin and Ren, Wenqi and Li, Chongyi},
           title = {Image Dehazing Transformer with Transmission-Aware 3D Position Embeddingn},
           journal = {CVPR},
-          pape={},
+          pape={5812-5820},
           year = {2022}
           }
           </pre>
