--- a/index.html
+++ b/index.html
@@ -401,8 +401,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="">PDF</a>| 
 		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>|
-		    <a href="">Dataset</a>
+                    <a href="">Code</a>
                 </span>
             </p>
           </div>
@@ -425,8 +424,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="">PDF</a>| 
 		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>|
-		    <a href="">Dataset</a>
+                    <a href="">Code</a>
                 </span>
             </p>
           </div>
