--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2023.</strong></li>
 <li> 2022/07 --One paper hits on <strong>ECCV 2022</strong></li>
 <li> 2022/07 --We release our Dehamer code (CVPR 2022) </li>
 <li> 2022/06 --Two papers hit on <strong>ACMM MM 2022</strong></li>
@@ -1024,7 +1025,7 @@ IEEE Workshop on Multimedia Signal Processing (MMSP) 2022
 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
-AAAI 2022
+AAAI 2022, 2023
 <!--
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
