--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@ Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)</b
 Multimedia Tools and Applications (IF: 2.313)
 
 <br><strong>Session Chair</strong></br>
-IEEE Workshop on Multimedia Signal Processing (MMSP) 2022
+IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
