--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>TCYB, 2022</b></em>
                 <br> 
-              Runmin Cong, Ning Yang, and <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
+              Runmin Cong, Ning Yang, <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2204.08917.pdf">PDF</a>| 
