--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/07 --We release the code of our CodeFormer (face restoration). Try your face on<a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing" target="_blank"><font color="#ff0000">[Colab]</font></a></li>
 <li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2023.</strong></li>
 <li> 2022/07 --One paper hits on <strong>ECCV 2022</strong></li>
 <li> 2022/07 --We release our Dehamer code (CVPR 2022) </li>
