--- a/index.html
+++ b/index.html
@@ -315,8 +315,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">
-            <p> 
+            <!--<img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">-->
+         <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/film-enhancement-codeformer.mp4"> <source src="logo/film-enhancement-codeformer.mp4" type="video/mp4"></video>    
+	<p> 
                 <strong>
                     <a href="">Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
                 </strong>
