--- a/index.html
+++ b/index.html
@@ -922,6 +922,25 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Events:</h2>  
 
+<div class="publication">
+            <img src="logo/codeformer1.jpg" onmouseover="this.src='logo/codeformer2.jpg';" onmouseout="this.src='logo/codeformer1.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Try Your Face (face restoration platform)</a>
+                </strong> 
+              We provide our code of CodeFormer (Towards Robust Blind Face Restoration with Codebook Lookup TransFormer) on Colab. Please feel free to try your face.
+                <br>
+                <span class="links">
+		      <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing">Colab</a>	
+		      
+                </span>
+            </p>
+          </div>
+          <br>
+	  <br>
+	<br />
+	<br />
+	<br />
 	
 <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
