--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://arxiv.org/pdf/2206.11253.pdf">PDF</a>| 
 		    <a href="https://shangchenzhou.com/projects/CodeFormer/">Project Page</a>| 	
 		    <a href="https://github.com/sczhou/CodeFormer">Code</a>| 
-		    <a href="https://www.youtube.com/watch?v=d3VDpkXlueI">Video</a>
+		    <a href="https://www.youtube.com/watch?v=d3VDpkXlueI">Video</a>| 
 		    <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing">Colab</a>
                 </span>
             </p>
