--- a/index.html
+++ b/index.html
@@ -344,8 +344,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 
 
 	 <div class="publication">
-            <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
-            <p> 
+            <!--<img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">-->
+        <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/LEDNet_video_demo.mp4"> <source src="logo/LEDNet_video_demo.mp4" type="video/mp4"></video>        
+	<p> 
                 <strong>
                     <a href="">LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</a>
                 </strong>
