--- a/index.html
+++ b/index.html
@@ -1047,6 +1047,7 @@ Multimedia Tools and Applications (IF: 2.313)</br>
 Frontiers in Signal Processing
 
 <br><strong>Session Chair</strong></br>
+ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
 IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
 
