--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/07 --I am nominated with honor to serve as a <strong>Area Chair</strong> of the BMVC 2022.</strong></li>
 <li> 2022/07 --We release the code of our CodeFormer (face restoration). Try your face on <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing" target="_blank"><font color="#ff0000">[Colab].</font></a></li>
-<li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee (Meta-Reviewers)</strong> of the AAAI 2023.</strong></li>
+<li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2023.</strong></li>
 <li> 2022/07 --One paper hits on <strong>ECCV 2022</strong></li>
 <li> 2022/07 --We release our Dehamer code (CVPR 2022) </li>
 <li> 2022/06 --Two papers hit on <strong>ACMM MM 2022</strong></li>
@@ -303,7 +304,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="">PDF</a>| 
 		    <a href="https://nukaliad.github.io/projects/Flare7K">Project Page</a>| 	
-		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>
+		    <a href="https://drive.google.com/file/d/1PPXWxn7gYvqwHX301SuWmjI7IUUtqxab/view">Dataset</a>|
 		  <a href="https://www.youtube.com/watch?v=CR3VFj4NOQM&feature=youtu.be">Video</a>
                 </span>
             </p>
@@ -1045,6 +1046,9 @@ IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 3.554)</br>
 Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)</br>
 Multimedia Tools and Applications (IF: 2.313)</br>
 Frontiers in Signal Processing
+
+<br><strong>Area Chair</strong></br>
+BMVC 2022</br>
 
 <br><strong>Session Chair</strong></br>
 ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
