--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2022/07 --I am nominated with honor to serve as a <strong>Area Chair</strong> of the BMVC 2022.</strong></li>
+<li> 2022/07 --I am nominated with honor to serve as an <strong>Area Chair</strong> of the BMVC 2022.</strong></li>
 <li> 2022/07 --We release the code of our CodeFormer (face restoration). Try your face on <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing" target="_blank"><font color="#ff0000">[Colab].</font></a></li>
 <li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2023.</strong></li>
 <li> 2022/07 --One paper hits on <strong>ECCV 2022</strong></li>
@@ -1045,7 +1045,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 IEEE Journal of Oceanic Engineering (Lead Guest Editor) (IF: 3.554)</br>
 Signal Processing: Image Communication (Management Guest Editor) (IF：2.779)</br>
 Multimedia Tools and Applications (IF: 2.313)</br>
-Frontiers in Signal Processing
+Frontiers in Signal Processing</br>
 
 <br><strong>Area Chair</strong></br>
 BMVC 2022</br>
@@ -1053,10 +1053,10 @@ BMVC 2022</br>
 <br><strong>Session Chair</strong></br>
 ECCV Workshop on Mobile Intelligent Photography & Imaging (MIPI) 2022</br>
 IEEE Workshop on Multimedia Signal Processing (MMSP) 2022</br>
-Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019
+Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2019</br>
 
 <br><strong>Senior Program Committee (Meta-Reviewers)</strong></br>
-AAAI 2022, 2023
+AAAI 2022, 2023</br>
 <!--
 <br><strong>Reviewer</strong></br>
 <li><strong>IEEE</strong>:</li>TPAMI, TIP, TCyber, TCSVT, TNNLS, TMM, TB, TIM, TGARS, TITS, TCSVT II: Express Briefs, ACCESS, SPL, JOE, JBHI, J-STARS, MultiMedia
