--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/07 --Our paper Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement has been recognized as <strong>2020 Pattern Recognition Best Paper Honourable Mention.</strong></li>
 <li> 2022/07 --I am nominated with honor to serve as an <strong>Area Chair</strong> of the BMVC 2022.</strong></li>
 <li> 2022/07 --We release the code of our CodeFormer (face restoration). Try your face on <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing" target="_blank"><font color="#ff0000">[Colab].</font></a></li>
 <li> 2022/07 --I am nominated with honor to serve as a <strong>Senior Program Committee</strong> of the AAAI 2023.</strong></li>
@@ -751,7 +752,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
                 </strong>
 		     <br>
-		 <em><b>PR, 2020</b></em>
+		 <em><b>PR, 2020 <a href="./PDF/PR_honorable mention_2020.pdf" target="_blank"><font color="#ff0000">[Pattern Recognition Best Paper Honourable Mention].</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Saeed Anwar, Fatih Porikli.
                 <br>
@@ -1005,7 +1006,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Honors & Awards:</h2>
 
 <ul>
-<li> 2022/04 --Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
+<li>Pattern Recognition (Elsevier Journal) <a href="./PDF/PR_honorable mention_2020.pdf">(Best Paper Honourable Mention)</a></li>
+<li> Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021)<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">News</a></li>
 <li>One paper has been recognized as <a href="https://clarivate.libguides.com/c.php?g=593878&p=4107960#:~:text=Hot%20Papers%20are%20papers%20published,database%20in%20the%20same%20period."  target="_blank">ESI Hot Paper</a>.</li>
 <li>I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
