--- a/sub_publication.html
+++ b/sub_publication.html
@@ -135,7 +135,7 @@
 </ol>    
   
 <h4>
-<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019:</h4><a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper].
+<a id="publications-J-pages" class="anchor" href="#publications-J-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>2019:</h4>
 
 <ol>
 <li> <strong>Chongyi Li</strong>,  Chunle Guo, Wenqi Ren, et al., An Underwater Image Enhancement Benchmark Dataset and Beyond, <strong><ud2>IEEE Transaction on Image Processing</ud2></strong> (SCI, IF=9.34), 2019. <a href="https://arxiv.org/pdf/1901.05495.pdf" target="_blank"><font color="#1C86EE">[PDF--arXiv version]</font></a> <a href="https://ieeexplore.ieee.org/document/8917818" target="_blank"><font color="#1C86EE">[PDF-offical version]</font></a> <a href="https://li-chongyi.github.io/proj_benchmark.html" target="_blank"><font color="#1C86EE">[Project]</font></a><font color="red">[ESI Highly Cited Paper & ESI Hot Paper]</font><a href="https://ieeexplore.ieee.org/xpl/topAccessedArticles.jsp?punumber=83" target="_blank"><font color="#ff0000">[Popular Documents]</font></a></li>   
