--- a/CuDi_files/index.html
+++ b/CuDi_files/index.html
@@ -177,8 +177,8 @@
         <br>
         <p align="center" style="margin-top: -2px">
         <b>Diverse results on real-world exposure scenes.</b><br>
-        <b><font color="#FF0000">The results are achieved by a single zero-reference learning-based model CuDi with only 3K parameters.</font>
-         <a href="https://drive.google.com/file/d/1tyeqZ6erKWHdbO318RKPnHznNLmt02xu/view?usp=sharing"> DownloadVideo</a></b>
+        <b><font color="#FF0000">The results are achieved by a single zero-reference learning-based model CuDi with only 3K parameters.</font></b>
+        <b><a href="https://drive.google.com/file/d/1tyeqZ6erKWHdbO318RKPnHznNLmt02xu/view?usp=sharing"> (DownloadVideo)</a></b>
         </p>
         
         
