--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/07 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/07 --Our paper Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement has been recognized as <strong>2020 Pattern Recognition Best Paper Honourable Mention.</strong></li>
 <li> 2022/07 --I am nominated with honor to serve as an <strong>Area Chair</strong> of the BMVC 2022.</strong></li>
 <li> 2022/07 --We release the code of our CodeFormer (face restoration). Try your face on <a href="https://colab.research.google.com/drive/1m52PNveE4PBhYrecj34cnpEeiHcC5LTb?usp=sharing" target="_blank"><font color="#ff0000">[Colab].</font></a></li>
