--- a/index.html
+++ b/index.html
@@ -441,6 +441,28 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 
+	 <div class="publication">
+            <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="PDF/HLRP-8M.mp4"> <source src="PDF/HLRP-8M.mp4" type="video/mp4"></video>
+            <p> 
+                <strong>
+                    <a href="">Underwater Image Enhancement with Hyper-Laplacian Reflectance Priors</a>
+                </strong>
+		  <br> 
+		<em><b>TIP, 2022</b></em>
+                <br> 
+               Peixian Zhuang, Jiamin Wu, Fatih Porikli, and <b>Chongyi Li<sup>+</sup</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 
 
 	 <div class="publication">
