--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	
 
 	 <div class="publication">
-            <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="PDF/HLRP-8M.mp4"> <source src="PDF/HLRP-8M.mp4" type="video/mp4"></video>
+            <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="logo/HLRP-8M.mp4"> <source src="logo/HLRP-8M.mp4" type="video/mp4"></video>
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement with Hyper-Laplacian Reflectance Priors</a>
