--- a/CuDi_files/index.html
+++ b/CuDi_files/index.html
@@ -192,16 +192,16 @@
           <tr>
             <td width="30%">
               <center>
-                <a href="#" target="_blank" class="imageLink"><img
+                <a href="https://arxiv.org/pdf/2207.14273.pdf" target="_blank" class="imageLink"><img
                     src="./src/thumbnail.png" , height="120"></a><br><br>
-                <a href="#" disabled target="_blank">Paper</a>
+                <a href="https://arxiv.org/pdf/2207.14273.pdf" disabled target="_blank">Paper</a>
               </center>
             </td>
             <td width="30%" valign="middle">
               <center>
-                <a href="#" target="_blank" class="imageLink"><img
+                <a href="https://li-chongyi.github.io/CuDi_files/" target="_blank" class="imageLink"><img
                     src="./src/icon_github.png" , height="120"></a><br><br>
-                <a href="https://github.com/sczhou/" target="_blank">Codes (appear soon)</a>
+                <a href="https://li-chongyi.github.io/CuDi_files/" target="_blank">Codes (appear soon)</a>
               </center>
             </td>
           </tr>
@@ -217,7 +217,7 @@
           <pre>@inproceedings{Li2022cudi,
           author = {Li, Chongyi and Guo, Chunle and Feng, Ruicheng and Zhou, Shangchen and Loy, Chen Change},
           title = {CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment},
-          booktitle = {Arixv},
+          booktitle = {arXiv:2207.14273},
           year = {2022}
           }</pre>
         </div>
