--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                Peixian Zhuang, Jiamin Wu, Fatih Porikli, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
                 <span class="links">
-                    <a href="">PDF</a>| 
-		    <a href="">Project Page</a>| 	
-                    <a href="">Code</a>
+                    <a href="https://ieeexplore.ieee.org/document/9854113">PDF</a>| 
+		    <a href="https://github.com/zhuangpeixian/HLRP">Project Page</a>| 	
+                    <a href="https://github.com/zhuangpeixian/HLRP">Code</a>
                 </span>
             </p>
           </div>
