--- a/index.html
+++ b/index.html
@@ -244,6 +244,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
+
+	<div class="publication">
+            <img src="logo/URanker.png" onmouseover="this.src='logo/URanker.png';" onmouseout="this.src='logo/URanker.png';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Underwater Ranker: Learn Which Is Better and How to Be Better</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+              Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2208.06857.pdf">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 	  <div class="publication">
             <img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">
@@ -254,7 +277,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2022</b></em>
                 <br> 
-              Qixin Yan, Chunle Guo, Chen Change Loy, and <b>Chongyi Li</b>.
+              Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
