--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement Quality Evaluation: Benchmark Dataset and Objective Metric</a>
                 </strong>
 		  <br> 
-		<em><b>TCSVT, 2022</b></em>
+		<em><b>TCSVT, 2022 <a href="" target="_blank"><font color="#ff0000">[TCSVT Popular Articles]</font></a></b></em>
                 <br> 
               Qiuping Jiang, Yuses Gu, <b>Chongyi Li</b>, Runmin Cong, and Feng Shao.
                 <br>
@@ -636,7 +636,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/9369102">Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</a>
                 </strong>
 		  <br>
-		<em><b>TPAMI, 2021</b></em>
+		<em><b>TPAMI, 2021 <a href="" target="_blank"><font color="#ff0000">[TPAMI Popular Articles]</font></a></b></em>
                 <br>
                <b>Chongyi Li</b>, Chunle Guo, Chen Change Loy.
                 <br>
@@ -751,7 +751,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
 		    <br>
-		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper]</font></a></b></em>
+		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
@@ -775,7 +775,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		     <br>
-		 <em><b>TGRS, 2020</b></em>
+		 <em><b>TGRS, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -799,7 +799,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
                 </strong>
 		     <br>
-		 <em><b>PR, 2020 <a href="./PDF/PR_honorable mention_2020.pdf" target="_blank"><font color="#ff0000">[Pattern Recognition Best Paper Honourable Mention]</font></a></b></em>
+		 <em><b>PR, 2020 <a href="./PDF/PR_honorable mention_2020.pdf" target="_blank"><font color="#ff0000">[Pattern Recognition Best Paper Honourable Mention & ESI Highly Cited Paper]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Saeed Anwar, Fatih Porikli.
                 <br>
@@ -822,7 +822,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D Salient Object Detection</a>
                 </strong>
 		     <br>
-		 <em><b>TCYB, 2020</b></em>
+		<em><b>TCYB, 2020<a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TCYB Popular Articles]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, Qiangming Huang.
                 <br>
@@ -867,7 +867,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
                 </strong>
 		     <br>
-		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper]</font></a></b></em>
+		 <em><b>TIP, 2020 <a href="" target="_blank"><font color="#ff0000">[ESI Hot Paper & ESI Hot Paper]</font></a></b></em>
                 <br>
                 Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
                 <br>
@@ -938,7 +938,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/7574330">Underwater Image Enhancement by Dehazing with Minimum Information Loss and Histogram Distribution Prior</a>
                 </strong>
 		     <br>
-		<em><b>TIP, 2016</b></em>
+		 <em><b>TIP, 2016 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, Yanwei Pang, Bo Wang.
                 <br>
