--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2022</b></em>
                 <br> 
-              Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li</b>.
+              Chunle Guo, Ruiqi Wu, Xin Jin, Linghao Han, Zhi Chai, Weidong Zhang, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2208.06857.pdf">PDF</a>| 
@@ -277,7 +277,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>2022</b></em>
                 <br> 
-              Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li</b>.
+              Qixin Yan, Chunle Guo, Jixin Zhao, Yuekun Dai, Chen Change Loy, and <b>Chongyi Li<sup>+</sup></b>.
                 <br>
                 <span class="links">
                     <a href="">PDF</a>| 
@@ -905,7 +905,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	 <br />
 	 <br />	
-	
+	<!--<
         <div class="publication">
             <img src="./logo/TMM19_logo.png" class="publogo"  width="300 px">
             <p> 
@@ -928,7 +928,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	 <br />
 	 <br />	
-	
+	-->
 	
         <div class="publication">
             <img src="./logo/TIP16_logo.png" class="publogo"  width="300 px">
@@ -939,7 +939,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		     <br>
 		 <em><b>TIP, 2016<a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br>
-                <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, Yanwei Pang, Bo Wang.
+                <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, et al.
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/document/7574330">PDF</a>| 
@@ -1056,11 +1056,11 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <li> Our team Feedforward won the <strong>second runner-up (3/317)</strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li>IEEE Journal of Oceanic Engineering (Outstanding Reviewer in 2021)<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9756533">News</a></li>
 <li>I am homored to be recognised as the <strong>World’s Top 2% Scientists (2020)</strong>. It is compiled by Stanford University based on the standardized citation indicators (Table_1_Authors_singleyr_2020_wopp_extracted_202108), which is avaiable online at <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank"><font color="#ff0000">Mendeley Database.</font></a></li>
-<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>
+<!--<<li>2021 Innovation in Information Technology Application and Artificial Intelligent Academic Forum for Post-doctoral Talents, Tianjin, China. Runners-up Award. <a href="PDF/postdoc_runner-up.jpg"  target="_blank">PDF</a></li>-->
 <li>ICCV (Outstanding Reviewer in 2021). <a href="http://iccv2021.thecvf.com/outstanding-reviewers"  target="_blank">PDF</a></li>
 <li>CVPR (Outstanding Reviewer in 2021). <a href="http://cvpr2021.thecvf.com/node/184"  target="_blank">PDF</a></li>
-<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>
-<li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>
+<!--<<li>6th, NTIRE 2021 Challenge on Non-Homogeneous Image Dehazing, 2021. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/NTIRE2021_NonHomogeneous_Dehazing_Report_compressed.pdf" target="_blank">PDF</a></li>-->
+<!--<<li>2020 National Postdoctoral Forum on the Development and Application of Artificial Intelligence, Tianjin, China. Excellence Award. <a href="https://github.com/Li-Chongyi/PAPERS/blob/master/%E5%8D%9A%E5%90%8E%E4%BC%98%E7%A7%80%E5%A5%96.pdf">PDF</a></li>-->
 <li>Distinguished Dissertation Award of Beijing Society of Image and Graphics, 2018.<a href="http://www.bsig.org.cn/detail/2316">Media</a></li> 
 
 <!--<li>Bohai Securities Fellowship, 2017.</li>
@@ -1128,8 +1128,11 @@ AAAI 2022, 2023</br>
  <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supervision and Teaching:</h2>
 <ul>
-<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Image and Video Enhancement, NTU, 01/2022-present</li>	
-<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Video Depth Estimation, NTU, 08/2021-present</li>
+<li>Co-Supervisor, Ph.D.: Haoying Li (Zhejiang University),  Visiting Scholar: Nerf Editing, NTU, 08/2022-present</li>
+<li>Co-Supervisor, M.E.: Jixin Zhao (Tianjin University),  Intern: Video Denoising, NTU, 08/2022-present</li>
+<li>Co-Supervisor, B.E.: Yihang Luo (Nanyang Technological University),  Intern: Image Colorization, NTU, 08/2022-present</li>	
+<li>Co-Supervisor, M.E.: Zhexin Liang (Zhejiang University),  AI Major Project: Backlit Image Enhancement, NTU, 01/2022-present</li>	
+<li>Co-Supervisor, M.E.: Yuekun Dai (Peking University),  AI Major Project: Nighttime Flare Removal, NTU, 08/2021-present</li>
 <li>Co-Supervisor, M.E.: Xingshu Wang (Beijing University of Posts and Telecommunications),  Project: Reference-Based Image Super-Resolution, ANU</li>
 
 <li>Teaching Assistant, NTU CE6126: MSAI Advanced Computer Vision, NTU, Fall 2020 </li>
