--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 
 
 <div class="container">
-<h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
+<h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Selected Publications:</h2>
         <br>
 	
 	  <div class="publication">
@@ -937,7 +937,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/7574330">Underwater Image Enhancement by Dehazing with Minimum Information Loss and Histogram Distribution Prior</a>
                 </strong>
 		     <br>
-		 <em><b>TIP, 2016<a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
+		 <em><b>TIP, 2016 <a href="" target="_blank"><font color="#ff0000">[ESI Highly Cited Paper & TIP Popular Articles]</font></a></b></em>
                 <br>
                 <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, et al.
                 <br>
