--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
+<li> 2022/09 --One paper has been accepted by <strong>TCSVT</strong></li>
 <li> 2022/08 --ZeroDCE++ is included in the list of <strong>Popular TPAMI Articles</strong></li>
 <li> 2022/07 --One paper has been accepted by <strong>TIP</strong></li>
 <li> 2022/07 --Our paper Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement has been recognized as <strong>2020 Pattern Recognition Best Paper Honourable Mention.</strong></li>
