--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement with Hyper-Laplacian Reflectance Priors</a>
                 </strong>
 		  <br> 
-		<em><b>TIP, 2022</b></em>
+		<em><b>TIP, 2022<a href="" target="_blank"><font color="#ff0000">[TIP Popular Articles]</font></a></b></em>
                 <br> 
                Peixian Zhuang, Jiamin Wu, Fatih Porikli, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
@@ -496,7 +496,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b>TIP, 2022</b></em>
+		<em><b>TIP, 2022<a href="" target="_blank"><font color="#ff0000">[TIP Popular Articles]</font></a></b></em>
                 <br> 
                Weidong Zhang, Peixian Zhuang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li<sup>+</sup</b>.
                 <br>
@@ -659,7 +659,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement via Medium Transmission-Guided Multi-Color Space Embedding</a>
                 </strong>
 		  <br> 
-		<em><b>TIP, 2021</b></em>
+		<em><b>TIP, 2021<a href="" target="_blank"><font color="#ff0000">[TIP Popular Articles]</font></a></b></em>
                 <br> 
                <b>Chongyi Li</b>, Saeed Anwar, Junhui Hou, Runmin Cong, Chunle Guo, Wenqi Ren.
                 <br>
