--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Flare7K: A Phenomenological Nighttime Flare Removal Dataset</a>
                 </strong>
 		  <br> 
-		<em><b>2022</b></em>
+		<em><b>NeurIPS 2022-Datasets and Benchmarks track</b></em>
                 <br> 
                Yuekun Dai, <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, and Chen Change Loy.
                 <br>
@@ -350,7 +350,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Towards Robust Blind Face Restoration with Codebook Lookup TransFormer</a>
                 </strong>
 		  <br> 
-		<em><b>2022</b></em>
+		<em><b>NeurIPS 2022</b></em>
                 <br> 
                 Shangchen Zhou, Kelvin C. K. Chan, <b>Chongyi Li</b>, and Chen Change Loy.
                 <br>
